# winesearch-example

./: .gitattributes  .gitignore  LICENSE  Makefile  Readme.md
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: mod.rs
data/: wine-generator.py  wines.json
frontend/: index.html  pyserver.py
